--- a/insert.html
+++ b/insert.html
@@ -191,7 +191,7 @@ $(document).ready(function(){
 function validate()
 {
    
-    alert("REGISTRATION SUCCESSFUL! GO AHEAD WITH YOUR LOGIN PROCESS🤩");
+    alert("INSERTION SUCCESSFULL!!🤩");
   
 
 
@@ -210,9 +210,9 @@ function validate()
     </head>
     <body>
         
-        <form action="/reg" name="myform" id="form" method="POST" >
+        <form action="/insert" name="myform" id="form" method="POST" >
             <div>
-                <h1><i>REGISTRATION</i>👀</h1></div><br><br>
+                <h1><i>INSERT</i>👇</h1></div><br><br>
                 <div>
             <label for="fname">NAME :</label>
                 <input id="fname" type="text" name="name" required>
