--- a/delete.html
+++ b/delete.html
@@ -30,11 +30,23 @@
             font-weight:bold;
             font-size:15px;
         }
+        a{
+            color:rgb(216, 15, 25);
+          text-decoration: none;
+          padding-right:250px;
+          padding-left: 10px;
+
+           }
+
+           a:hover{
+            color:gold;
+           }
         
     </style>
 </head>
 
 <body>
+    <a href="http://localhost:3000/profile"><b>👈 BACK TO PROFILE</b></a>
     <h1>DELETE😌</h1>
     <form action="/delete" method="POST" name="myform">
         <div>
