--- a/read.html
+++ b/read.html
@@ -30,10 +30,22 @@
             font-weight:bold;
             font-size:15px;
         }
+        a{
+            color:rgb(216, 15, 25);
+          text-decoration: none;
+          padding-right:250px;
+          padding-left: 10px;
+
+           }
+
+           a:hover{
+            color:gold;
+           }
         
     </style>
 </head>
 <body>
+    <a href="http://localhost:3000/profile"><b>👈BACK TO PROFILE</b></a>
     <h1>READ YOUR DATA😉</h1>
     <form name="myform" method="POST" action="/read">
         <div>
