--- a/update.html
+++ b/update.html
@@ -60,6 +60,8 @@
             <label for="mail">EMAIL :</label>
             <input id="mail" type="email" name="email" required >
              </div><br><br>
+            <div><label for="fname">NAME :</label>
+                <input id="fname" type="text" name="name" required><br><br></div> 
              <div> <label for="Register"></label>
                 <input id="Register" type="submit" name="Register" onclick="date()" ></div>    </form>
 </body>
